# OpenJitLibProvider

./: .dockerignore  .gitignore  DOCKERFILE  README.MD  config-local-example.yml  config.properties  config.yml  main.py  requirements.txt
ivy/: .gitignore  dependencies.txt  main.py
src/: __init__.py  app.py  build_utils.py  config.py  config.yml  consts.py  cron_cleaner.py  error_handler.py  git_utils.py  maven_utils.py  nexus_service.py  ui_service.py
src/build_utils/: build_utils.py  build_wrapper.py  gradle_utils.py  maven_utils.py
src/prototype/cmake/: CMakeLists.txt  Conanfile.txt  app.py
src/prototype/npm/: .npmrc  package.json  prototyp_app.py
src/prototype/pip/: .pypirc  app.py  requirements.txt
tests/: build.gradle  test_server.py
tests/gradle/wrapper/: gradle-wrapper.properties
